style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap");

* {
  box-sizing: border-box;
}

body {
  background-color: #fff;
  margin: 0;
  font-family: "Roboto", sans-serif;
}

button {
  cursor: pointer;
}

button:active {
  transform: scale(0.95);
}

input:focus,
button:focus {
  outline: none;
}

header {
  background-image: url("https://images.unsplash.com/photo-1510915361894-db8b60106cb1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  color: #fff;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 100px 20px;
  position: relative;
}

header::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
}

header * {
  z-index: 1;
}

header h1 {
  margin: 0 0 30px;
}

form {
  position: relative;
  width: 500px;
  max-width: 100%;
}

form input {
  border: 0;
  border-radius: 50px;
  font-size: 16px;
  padding: 15px 30px;
  width: 100%;
}

form button {
  position: absolute;
  top: 2px;
  right: 2px;
  background-color: #e056fd;
  border: 0;
  border-radius: 50px;
  color: #fff;
  font-size: 16px;
  padding: 13px 30px;
}

.btn {
  background-color: #8d56fd;
  border: 0;
  border-radius: 10px;
  color: #fff;
  padding: 4px 10px;
}

.wrapper,
.container {
  display: flex;
  flex-direction: column;
  flex-direction: wrap;
  padding: 0 20px;
  text-align: center;
  margin: 30px auto;
}

.container {
  max-width: 100%;
  width: 700px;
}

.container h2 {
  font-size: 20px;
}

.container p {
  text-align: center;
}

.centered button {
  transform: scale(1.3);
  margin: 15px;
}

ul.songs {
  list-style-type: none;
  padding: 0;
}

ul.songs button {
  margin-left: 30px;
}

ul.songs li {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 10px 0;
}

ul.songs li span {
  word-break: normal;
  text-align: left;
}

.preview-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-between;
  text-align: left;
}

.song-wrapper {
  padding-bottom: 25px;
}

.preview-music {
  padding: 20px 0;
}

.preview-album,
.preview-lyrics {
  display: flex;
  flex-direction: column;
}

.preview-lyrics p {
  text-align: left;
}

.preview-lyrics .fas {
  font-size: 20px;
  padding: 0;
  line-height: 1.6;
  margin: 0 10px 0 0;
}

.preview-album {
  font-weight: 300;
}

.preview-header {
  display: flex;
  flex-direction: row;
  justify-content: left;
  width: 400px;
}

.artist {
  border-radius: 50%;
  width: 90px;
  height: 90px;
  margin: 0 15px 15px 0;
}

.album {
  border: 1px solid black;
  width: 200px;
  height: auto;
}

/* audio::-webkit-media-controls-panel {
  background-color: black;

} */

